css styles and main content of page with design usign bootstrap. Currently in test phase.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,258 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The exact same bootstrap page everyone else makes.">
+    <meta name="author" content="Me, you, her, everyone, et al.">
     <title>Anime Club USV</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Bootstrap Icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css" />
+    <!-- SimpleLightbox plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
-<body>
-    <div>
-        <p>Hello, World!</p>
-    </div>
-    <footer>
-        Made with ❤️ in San Jose, California
+<body id="page-top">
+    <!-- Navigation-->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">The Only Bootstrap Page</a>
+            </div>
+    
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="">
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#services">Four Icons</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#portfolio">Bullshit</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#contact">Call Me</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <!-- Masthead-->
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1 style="font-size: 65px;">Hey Look, It's Every Bootstrap Website Ever</h1>
+                <hr>
+                <p>Take a look around at the same fucking bootstrap page
+                    you've seen ten million times before! Featuring all the same things as
+                    those pages!</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">This button makes the page scroll</a>
+            </div>
+        </div>
+    </header>
+    <!-- About-->
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Want to make an original website yourself?</h2>
+                    <hr class="light">
+                    <p class="text-faded">Forget that! Who would ever
+                        want to put in all of that effort for a website? Just open up your web
+                        browser and type "bootstrap template" into your favorite search engine,
+                        like Yahoo! or Bing, and you're on your way! There are hundreds of
+                        templates to choose from, but go ahead and pick this same exact template
+                        from the first result on google, edit a few lines, and you're on your
+                        way! No one will notice!</p>
+                    <a href="http://lmgtfy.com/?q=bootstrap+template" target="_blank" class="btn btn-default btn-xl">Google
+                        That Shit</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services-->
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">So Fucking Creative</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-globe wow bounceIn text-primary"
+                            style="visibility: visible; animation-name: bounceIn;"></i>
+                        <h3>This Fucking Template</h3>
+                        <p class="text-muted">Guaranteed to use the same fucking template that every other bootstrap website
+                            uses, downloaded straight from The Web™</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"
+                            style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
+                        <h3>This Set of Four Icons</h3>
+                        <p class="text-muted">Look at this cool set of four icons describing different things about us! We
+                            use four, because it's the default.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-thumbs-up wow bounceIn text-primary" data-wow-delay=".2s"
+                            style="visibility: visible; animation-delay: 0.2s; animation-name: bounceIn;"></i>
+                        <h3>Lots of effort</h3>
+                        <p class="text-muted">We even changed some of the icons! We take the extra effort to make our
+                            designs truly original.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"
+                            style="visibility: visible; animation-delay: 0.3s; animation-name: bounceIn;"></i>
+                        <h3>Made with Love</h3>
+                        <p class="text-muted">Because nothing says hard work and talent like editing a few lines of text.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio-->
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="portfolio-box">
+                        <img src="Every%20Fucking%20Bootstrap%20Website%20Ever_files/1.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    One Thing
+                                </div>
+                                <div class="project-name">
+                                    Look
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="portfolio-box">
+                        <img src="Every%20Fucking%20Bootstrap%20Website%20Ever_files/2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Two Thing
+                                </div>
+                                <div class="project-name">
+                                    At
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="portfolio-box">
+                        <img src="Every%20Fucking%20Bootstrap%20Website%20Ever_files/3.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Three Thing
+                                </div>
+                                <div class="project-name">
+                                    This
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="portfolio-box">
+                        <img src="Every%20Fucking%20Bootstrap%20Website%20Ever_files/4.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Four Thing
+                                </div>
+                                <div class="project-name">
+                                    Bullshit
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Call to action-->
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Seriously, It's This Fucking Template !</h2>
+                <a href="#" class="btn btn-default btn-xl wow tada"
+                    style="visibility: visible; animation-name: tada;">That's Amazing!</a>
+            </div>
+        </div>
+    </aside>
+    <!-- Contact-->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">My Contact Information</h2>
+                    <hr class="primary">
+                    <p>Here's my phone number and email address, because
+                        hey that's part of the template and why would you not include that on
+                        your webpage? You'd be a fool not to! I can't wait for all the job
+                        offers to come pouring in from all the companies wanting my insane
+                        website design skills.</p>
+                    <p>Honestly this template does look really nice, though.</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x wow bounceIn" style="visibility: visible; animation-name: bounceIn;"></i>
+                    <p>+1-608-317-1888</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"
+                        style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i>
+                    <p><a href="mailto:tab@report.ly">holy@shit.com</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer-->
+    <footer class="bg-light py-5">
+        <div class="container px-4 px-lg-5">
+            <div class="small text-center text-muted">Copyright &copy; 2022 - Anime Club USV</div>
+            <div class="small text-center text-muted">Made with ❤️ in San Jose, California</div>
+        </div>
     </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- SimpleLightbox plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
