--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
             <div class="small text-center text-muted">Copyright &copy; 2022 - Company Name</div>
         </div>
     </footer>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SimpleLightbox plugin JS-->
