--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                    <i class="bi bi-envelope"></i>
+                    <i class="bi-envelope fs-2 mb-3"></i>
                     <div></p><a href="mailto:animeclubusv@gmail.com">animeclubusv@gmail.com</a></div>
                 </div>
             </div>
