--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
         <div class="container px-4 px-lg-5 h-100">
             <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-end">
-                    <h1 class="text-white font-weight-bold">Your Favorite Place for Free Bootstrap Themes</h1>
+                    <h1 class="text-white font-weight-bold">Anime Club USV</h1>
                     <hr class="divider" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap
-                        framework! Just download a theme and start customizing, no strings attached!</p>
+                    <p class="text-white-75 mb-5">The home of anime, manga, game, and novel cultures all in one place in San Jose, CA at the University of Silicon Valley.</p>
                     <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                 </div>
             </div>
@@ -63,9 +62,10 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">We've got what you need!</h2>
                     <hr class="divider divider-light" />
-                    <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and
-                        running in no time! Choose one of our open source, free to download, and easy to use themes! No
-                        strings attached!</p>
+                    <p class="text-white-75 mb-4">Forget that! Who would ever want to put in all of that effort for a website? Just open up your web browser and type
+                    "bootstrap template" into your favorite search engine, like Yahoo! or Bing, and you're on your way! There are hundreds
+                    of templates to choose from, but go ahead and pick this same exact template from the first result on google, edit a few
+                    lines, and you're on your way! No one will notice!</p>
                     <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                 </div>
             </div>
@@ -81,28 +81,28 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Sturdy Themes</h3>
-                        <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                        <p class="text-muted mb-0">Guaranteed to use the same fucking template that every other bootstrap website uses, downloaded straight from The Web™</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Up to Date</h3>
-                        <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                        <p class="text-muted mb-0">Look at this cool set of four icons describing different things about us! We use four, because it's the default.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Ready to Publish</h3>
-                        <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                        <p class="text-muted mb-0">We even changed some of the icons! We take the extra effort to make our designs truly original.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">Made with Love</h3>
-                        <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                        <p class="text-muted mb-0">Because nothing says hard work and talent like editing a few lines of text.</p>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">TEXT_PLACEHOLDER</div>
                         </div>
                     </a>
                 </div>
@@ -126,7 +126,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">TEXT_PLACEHOLDER</div>
                         </div>
                     </a>
                 </div>
@@ -135,7 +135,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">TEXT_PLACEHOLDER</div>
                         </div>
                     </a>
                 </div>
@@ -144,7 +144,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">TEXT_PLACEHOLDER</div>
                         </div>
                     </a>
                 </div>
@@ -153,7 +153,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">TEXT_PLACEHOLDER</div>
                         </div>
                     </a>
                 </div>
@@ -162,7 +162,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                         <div class="portfolio-box-caption p-3">
                             <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-name">TEXT_PLACEHOLDER</div>
                         </div>
                     </a>
                 </div>
@@ -172,8 +172,8 @@
     <!-- Call to action-->
     <section class="page-section bg-dark text-white">
         <div class="container px-4 px-lg-5 text-center">
-            <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-            <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+            <h2 class="mb-4">TEXT_PLACEHOLDER</h2>
+            <a class="btn btn-light btn-xl" href="#page-top">TEXT_PLACEHOLDER</a>
         </div>
     </section>
     <!-- Contact-->
@@ -181,16 +181,15 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6 text-center">
-                    <h2 class="mt-0">Let's Get In Touch!</h2>
+                    <h2 class="mt-0">TEXT_PLACEHOLDER</h2>
                     <hr class="divider" />
-                    <p class="text-muted mb-5">Ready to start your next project with us? Send us a messages and we will
-                        get back to you as soon as possible!</p>
+                    <p class="text-muted mb-5">TEXT_PLACEHOLDER</p>
                 </div>
             </div>
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-4 text-center mb-5 mb-lg-0">
                     <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                    <div>+1 (555) 123-4567</div>
+                    <div>TEXT_PLACEHOLDER</div>
                 </div>
             </div>
             <div class="row gx-4 gx-lg-5 justify-content-center">
