--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
                     <div>TEXT_PLACEHOLDER</div>
                 </div>
             </div>
+            <br>
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                    <i class="bi-envelope fs-2 mb-3"></i>
+                    <i class="bi-envelope fs-2 mb-3 text-muted"></i>
                     <div></p><a href="mailto:animeclubusv@gmail.com">animeclubusv@gmail.com</a></div>
                 </div>
             </div>
