Opengraph meta data

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The exact same bootstrap page everyone else makes.">
+    <meta name="description" content="The home of anime, manga, game, and novel cultures all in one place in San Jose, CA at the University of Silicon Valley.">
     <meta name="author" content="Me, you, her, everyone, et al.">
+    <!--<meta name="og:title" content="Anime Club USV">-->
+    <meta name="og:description" content="The home of anime, manga, game, and novel cultures all in one place in San Jose, CA at the University of Silicon Valley.">
+    <meta name="og:image" content="https://cdn.discordapp.com/attachments/730143569448403076/1025203587099398226/bg-masthead.jpg" data-dynamic="true">
+    <meta name="og:image:alt" content="Anime Club USV Preview Image" data-dynamic="true">
+    <meta name="og:image:height" content="630" data-dynamic="true">
+    <meta name="og:image:secure_url" content="https://cdn.discordapp.com/attachments/730143569448403076/1025203587099398226/bg-masthead.jpg" data-dynamic="true">
+    <meta name="og:image:width" content="1200" data-dynamic="true">
+    <meta name="og:locale" content="en_US" data-dynamic="true">
+    <meta name="og:site_name" content="Anime Club USV" data-dynamic="true">
+    <meta name="og:title" content="Anime Club USV" data-dynamic="true">
+    <meta name="og:type" content="website" data-dynamic="true">
+    <meta name="og:url" content="https://animeclubusv.github.io" data-dynamic="true">
+    <meta name="twitter:card" content="summary_large_image" data-dynamic="true">
+    <meta name="twitter:description" content="The home of anime, manga, game, and novel cultures all in one place in San Jose, CA at the University of Silicon Valley." data-dynamic="true">
+    <meta name="twitter:image" content="https://assets.startbootstrap.com/img/meta/products/twitter/twitter-image-creative.png" data-dynamic="true">
+    <meta name="twitter:title" content="Anime Club USV" data-dynamic="true">
+    <meta name="twitter:site" content="@SBootstrap" data-dynamic="true">
     <title>Anime Club USV</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
