--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
     <footer class="bg-light py-5">
         <div class="container px-4 px-lg-5">
             <div class="small text-center text-muted">Copyright &copy; 2022 - Company Name</div>
+            <div class="small text-center text-muted">Made with ❤️ in San Jose, CA</div>
         </div>
     </footer>
     <!-- jQuery -->
