--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-75 mb-5">The home of anime, manga, game, and novel cultures all in one place in San Jose, CA at the University of Silicon Valley.</p>
-                    <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                    <a class="btn btn-primary btn-xl page-scroll" href="#about">Find Out More</a>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                     "bootstrap template" into your favorite search engine, like Yahoo! or Bing, and you're on your way! There are hundreds
                     of templates to choose from, but go ahead and pick this same exact template from the first result on google, edit a few
                     lines, and you're on your way! No one will notice!</p>
-                    <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                    <a class="btn btn-light btn-xl page-scroll" href="#services">Get Started!</a>
                 </div>
             </div>
         </div>
@@ -190,7 +190,7 @@
     <section class="page-section bg-dark text-white">
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">TEXT_PLACEHOLDER</h2>
-            <a class="btn btn-light btn-xl" href="#page-top">TEXT_PLACEHOLDER</a>
+            <a class="btn btn-light btn-xl page-scroll" href="#page-top">TEXT_PLACEHOLDER</a>
         </div>
     </section>
     <!-- Contact-->
@@ -227,11 +227,56 @@
     </footer>
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SimpleLightbox plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    <script>
+        (function ($) {
+                "use strict"; // Start of use strict
+
+                // jQuery for page scrolling feature - requires jQuery Easing plugin
+                $('a.page-scroll').bind('click', function (event) {
+                    var $anchor = $(this);
+                    $('html, body').stop().animate({
+                        scrollTop: ($($anchor.attr('href')).offset().top - 50)
+                    }, 1250, 'easeInOutExpo');
+                    event.preventDefault();
+                });
+
+                // Highlight the top nav as scrolling occurs
+                $('body').scrollspy({
+                    target: '.navbar-fixed-top',
+                    offset: 51
+                })
+
+                // Closes the Responsive Menu on Menu Item Click
+                $('.navbar-collapse ul li a').click(function () {
+                    $('.navbar-toggle:visible').click();
+                });
+
+                // Fit Text Plugin for Main Header
+                $("h1").fitText(
+                    1.2, {
+                    minFontSize: '35px',
+                    maxFontSize: '65px'
+                }
+                );
+
+                // Offset for Main Navigation
+                $('#mainNav').affix({
+                    offset: {
+                        top: 100
+                    }
+                })
+
+                // Initialize WOW.js Scrolling Animations
+                new WOW().init();
+
+            })(jQuery); // End of use strict
+    </script>
 </body>
 </html>
