--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top"><img src="logo.webp" alt="Anime Club USV" style="width:35%;height:35%;">Anime Club USV</a>
+            <a class="navbar-brand" href="#page-top"><img src="https://cdn.discordapp.com/attachments/730143569448403076/1025229435059830845/logo.webp" alt="Anime Club USV" style="width:35%;height:35%;">Anime Club USV</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
