--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top"><img src="https://cdn.discordapp.com/attachments/730143569448403076/1025229435059830845/logo.webp" alt="Anime Club USV" style="width:15%;height:15%;">Anime Club USV</a>
+        <div class="container px-2 px-lg-5">
+            <a class="navbar-brand" href="#page-top"><img src="https://cdn.discordapp.com/attachments/730143569448403076/1025229435059830845/logo.webp" alt="Anime Club USV" style="width:15%;height:15%;">&emsp; Anime Club USV</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -96,28 +96,28 @@
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-gem fs-1 wow bounceIn text-primary"></i></div>
                         <h3 class="h4 mb-2">Sturdy Themes</h3>
                         <p class="text-muted mb-0">Guaranteed to use the same fucking template that every other bootstrap website uses, downloaded straight from The Web™</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-laptop fs-1 wow bounceIn text-primary"></i></div>
                         <h3 class="h4 mb-2">Up to Date</h3>
                         <p class="text-muted mb-0">Look at this cool set of four icons describing different things about us! We use four, because it's the default.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-globe fs-1 wow bounceIn text-primary"></i></div>
                         <h3 class="h4 mb-2">Ready to Publish</h3>
                         <p class="text-muted mb-0">We even changed some of the icons! We take the extra effort to make our designs truly original.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-heart fs-1 wow bounceIn text-primary"></i></div>
                         <h3 class="h4 mb-2">Made with Love</h3>
                         <p class="text-muted mb-0">Because nothing says hard work and talent like editing a few lines of text.</p>
                     </div>
