navbar changes and animtion adjustments for icons

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -79,10 +79,12 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">We've got what you need!</h2>
                     <hr class="divider divider-light" />
-                    <p class="text-white-75 mb-4">Forget that! Who would ever want to put in all of that effort for a website? Just open up your web browser and type
-                    "bootstrap template" into your favorite search engine, like Yahoo! or Bing, and you're on your way! There are hundreds
-                    of templates to choose from, but go ahead and pick this same exact template from the first result on google, edit a few
-                    lines, and you're on your way! No one will notice!</p>
+                    <p class="text-white-75 mb-4">Anime Club USV started out in 2020 with just a few people coming together to do what they love. Little did they know
+                    that it would grow into the thriving Anime Club it is today. Our dedicated members enjoy meeting often for different
+                    events and activities. Passion and enthusiasm go hand-in-hand with everything we do.</p>
+                    <br>
+                    <p class="text-white-75 mb-4">Our door is always open to new members, no matter their experience level. We are proud to bring together people from all
+                    over San Jose and beyond. Come join us at our next event — we'd love to share all that Anime Club USV has to offer.</p>
                     <a class="btn btn-light btn-xl page-scroll" href="#services">Get Started!</a>
                 </div>
             </div>
@@ -96,28 +98,28 @@
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-gem fs-1 wow bounceIn text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-gem fs-1 wow bounceIn text-primary" style="visibility: visible; animation-name: bounceIn;"></i></div>
                         <h3 class="h4 mb-2">Sturdy Themes</h3>
                         <p class="text-muted mb-0">Guaranteed to use the same fucking template that every other bootstrap website uses, downloaded straight from The Web™</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-laptop fs-1 wow bounceIn text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-laptop fs-1 wow bounceIn text-primary" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i></div>
                         <h3 class="h4 mb-2">Up to Date</h3>
                         <p class="text-muted mb-0">Look at this cool set of four icons describing different things about us! We use four, because it's the default.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-globe fs-1 wow bounceIn text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-globe fs-1 wow bounceIn text-primary" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: bounceIn;"></i></div>
                         <h3 class="h4 mb-2">Ready to Publish</h3>
                         <p class="text-muted mb-0">We even changed some of the icons! We take the extra effort to make our designs truly original.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-heart fs-1 wow bounceIn text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-heart fs-1 wow bounceIn text-primary" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: bounceIn;"></i></div>
                         <h3 class="h4 mb-2">Made with Love</h3>
                         <p class="text-muted mb-0">Because nothing says hard work and talent like editing a few lines of text.</p>
                     </div>
@@ -125,7 +127,7 @@
             </div>
         </div>
     </section>
-    <!-- Portfolio-->
+    <!-- Gallery-->
     <div id="portfolio">
         <div class="container-fluid p-0">
             <div class="row g-0">
